--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,20 @@
+html {
+    background: lightgray;
+}
+
+.App {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 body {
-    * {
-        background: red;
+    font-size: 18px;
+
+    *, * > * {
+        padding: 0;
+        margin: 0;
     }
 }
